k8s-observability-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: logging-app
spec:
  selector:
    app: logging-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: metrics
      port: 5001
      targetPort: 5001
      protocol: TCP
  type: ClusterIP
